@@ -3453,7 +3453,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkLabel" id="label37">
+	    <widget class="GtkLabel" id="notes_label">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">&lt;b&gt;Notes&lt;/b&gt;</property>
 	      <property name="use_underline">False</property>
